# coup-backend

./: Cargo.toml  README.md
src/: main.rs
src/api/: api.rs
src/game/: action_properties.rs  card.rs  deck.rs  game.rs  mod.rs  player.rs  turn_phase.rs  turn_state_machine.rs
src/objects/: card.rs  deck.rs  game.rs  player.rs
src/websocket/: mod.rs  server.rs  session.rs  state.rs
