[package]
name = "coup-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
actix-files = "0.6.6"
log = "0.4.22"
rand = "0.8.5"
rust-fsm = "0.7.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.127"
strum = "0.26.3"
strum_macros = "0.26.4"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serialization with serde
]
